--- a/documentation/website/package.json
+++ b/documentation/website/package.json
@@ -1,14 +1,17 @@
 {
-  "scripts": {
-    "examples": "docusaurus-examples",
-    "start": "docusaurus-start",
-    "build": "docusaurus-build",
-    "publish-gh-pages": "docusaurus-publish",
-    "write-translations": "docusaurus-write-translations",
-    "version": "docusaurus-version",
-    "rename-version": "docusaurus-rename-version"
-  },
-  "devDependencies": {
-    "docusaurus": "^1.12.0"
-  }
+	"scripts": {
+		"deploy": "npm run copydist && npm run build  && gh-pages -d build/perceptible",
+		"examples": "docusaurus-examples",
+		"start": "docusaurus-start",
+		"build": "docusaurus-build",
+		"publish-gh-pages": "docusaurus-publish",
+		"write-translations": "docusaurus-write-translations",
+		"version": "docusaurus-version",
+		"rename-version": "docusaurus-rename-version",
+		"copydist": "cp -R ../../dist/ static/dist/ "
+	},
+	"devDependencies": {
+		"docusaurus": "^1.12.0",
+		"gh-pages": "^2.0.1"
+	}
 }
