--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
 		"@babel/cli": "^7.5.0",
 		"@babel/core": "^7.5.0",
 		"@babel/preset-env": "^7.5.0",
+		"babel-loader": "^8.0.6",
+		"eslint": "^6.1.0",
+		"eslint-plugin-jest": "^22.14.0",
 		"http-server": "^0.11.1",
+		"jest": "^24.8.0",
 		"webpack": "^4.35.2",
 		"webpack-cli": "^3.3.5",
-		"webpack-dev-server": "^3.7.2",
-		"babel-loader": "^8.0.6",
-		"jest": "^24.8.0"
-	}
+		"webpack-dev-server": "^3.7.2"
+	},
+	"dependencies": {}
 }
