--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "webpack",
 		"sample": "npx http-server -o ",
 		"test": "jest",
-		"test:watch": "jest --watch"
+		"test:watch": "jest --watch",
+		"test:coverage": "jest --coverage"
 	},
 	"repository": {
 		"type": "git",
