--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@babel/core": "^7.5.0",
 		"@babel/preset-env": "^7.5.0",
 		"babel-loader": "^8.0.6",
+		"coveralls": "^3.0.5",
 		"eslint": "^6.1.0",
 		"eslint-plugin-jest": "^22.14.0",
 		"http-server": "^0.11.1",
