--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"test:coverage": "jest --coverage",
-		"coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls"
+		"coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls",
+		"release": "npm run build && npx release-it"
 	},
 	"repository": {
 		"type": "git",
